# NF

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark_flow.py  pyproject.toml
.github/workflows/: ci.yml
configs/: demo_config.toml  large_graph_config.toml  telemetry_config.toml
nf_bench/: __init__.py  _encoding.py  _imports.py  cli.py  config.py  generators.py  models.py  reporting.py  runner.py  telemetry.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_config.py  test_config_validation.py  test_generators.py  test_generators_properties.py  test_imports_and_encoding.py  test_reporting.py  test_runner.py  test_runner_failures.py  test_telemetry.py
