[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-bench"
version = "0.1.0"
description = "Network flow benchmarking suite built on NetworkX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "pandas>=2.1",
    "seaborn>=0.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]
telemetry = [
    "psutil>=5.9",
]
plots = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.scripts]
nf-bench = "nf_bench.cli:main"

[tool.setuptools.packages.find]
include = ["nf_bench*"]

[tool.pytest.ini_options]
pythonpath = [
    "nf_bench",
]
addopts = "-ra"
